--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "cat purr"
+name = "purr"
 dynamic = ["version"]
 authors = [
   { name="Frederic Macabiau", email="superfred2468@gmail.com" }
@@ -18,7 +18,6 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent"
 ]
-#all depedencies of your project
 dependencies = [
   "requests",
   "numpy",
@@ -27,13 +26,11 @@ dependencies = [
   "docker",
 ]
 
-#project repository
 [project.urls]
-Homepage = https://github.com/entrezunfredici/cat_purr_init_framework_package"
+Homepage = "https://github.com/entrezunfredici/cat_purr_init_framework_package"
 
 [project.scripts]
-# alias = "purr: " 
 purr = "purr:cli"
 
 [tool.setuptools.dynamic]
-version = {attr = "sudokeys.__version__"}
+version = {attr = "purr.__version__"}
